fixed mobile p tag spacing

--- a/src/App.css
+++ b/src/App.css
@@ -122,19 +122,13 @@
 
 .about-section {
   z-index: 0;
-  height: auto;
   display: grid;
-  grid-template-rows: 1fr 1fr;
   margin-top: 100px;
-  margin-bottom: -100px;
   padding-bottom: 0;
   background-color: white;
 }
 
 .about-section p {
-  /* display: flex;
-  justify-items: center;
-  align-self: center; */
   margin-top: 0;
   margin-right: 20px;
   margin-left: 20px;
@@ -150,8 +144,6 @@
   height: auto;
   margin-top: 0;
   border: 30px solid white;
-  display: flex;
-  justify-self: center;
 }
 
 .ig-feed-section {
