--- a/src/Swiper/Swiper.css
+++ b/src/Swiper/Swiper.css
@@ -1,4 +1,4 @@
-/* #app {
+#app {
   height: 100%;
 }
 html,
@@ -32,7 +32,7 @@ body {
 .swiper-slide img {
   display: block;
   width: 100%;
-} */
+}
 
 /*freemode*/
 /* #app {
@@ -74,4 +74,60 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+} */
+
+/* WSV */
+/* #app {
+  height: 100%;
+}
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+.swiper {
+  /* width: 800px; */
+  width: 100%;
+}
+.swiper-slide {
+  height: 300px;
+  width: auto;
+  background: #882525;
+  /* line-height: 300px; */
+  text-align: center;
+}
+.swiper-slide:nth-child(2) {
+  background: #8acc7d;
+}
+.swiper-slide:nth-child(3) {
+  background: #b7cc7d;
+}
+.swiper-slide:nth-child(4) {
+  background: #9eb75c;
+}
+.swiper-slide:nth-child(5) {
+  background: #7da8cc;
+}
+.swiper-slide:nth-child(6) {
+  background: #96cc7d;
+}
+.swiper-slide:nth-child(7) {
+  background: #cc7dae;
+}
+
+.swiper-slide
+  .swiper-slide-next
+  .swiper-slide-visible
+  .swiper-slide-fully-visible {
+  width: auto;
 } */
